# Computer-Network-Programming

./: .gitignore  README.md  requirements.txt  server.py
Z1/: common.c  common.h
Z1/Z1.1/c/: Makefile  main.c  server.c
Z1/Z1.1/c/src/: server.c
Z1/Z1.1/python/: client.py  server.py
Z1/Z1.2/c/: CMakeLists.txt  Dockerfile  Makefile  client.c  common.c  common.h  docker_c_server_startup.sh  server.c  server_container_config.sh
Z1/Z1.2/c/include/: client_threads_data.h  client_threads_data_t.h  datagram.h  one_use_socket.h  packet_utils.h
Z1/Z1.2/c/src/: client.c  client_threads_data_t.c  datagram.c  one_use_socket.c  packet_utils.c  response.c  server.c
Z1/Z1.2/c/src/client/: client.c
Z1/Z1.3a/c/: server.c
c/Z1/Z1.1/: CMakeCache.txt  CMakeLists.txt  Makefile
c/Z1/Z1.1/docker/: run_on_bigubu_docker.sh
c/Z1/Z1.1/src/: client.c  server.c
c/Z1/Z1.2/: CMakeLists.txt
c/Z1/Z1.2/docker/: run_on_bigubu_docker.sh
c/Z1/Z1.2/docker/client/: Dockerfile  client_container_config.sh  docker_c_client_startup.sh
c/Z1/Z1.2/docker/server/: Dockerfile  docker_c_server_startup.sh  server_container_config.sh
c/Z1/Z1.2/include/server/: client_threads_data.h  one_use_socket.h  packet_utils.h
c/Z1/Z1.2/src/client/: client.c
c/Z1/Z1.2/src/server/: client_threads_data.c  one_use_socket.c  packet_utils.c  server.c
c/Z1/Z1.3a/: CMakeLists.txt  Dockerfile.client  Dockerfile.server  Makefile  Makefile.docker  client.c  run.sh  run_client.sh  run_server.sh  server.c
c/Z1/common/include/: common.h  (+5 more)
c/Z2/Z2.1/: CMakeLists.txt  Makefile  README.md  client.c  common.h  server.c
c/Z2/Z2.1/docker/: run_on_docker.sh
c/Z2/Z2.2/: CMakeLists.txt  Makefile  client.c
c/Z2/Z2.3/: CMakeLists.txt  client.c  generate_logs.sh  server.c  tmp_1.txt  tmp_10.txt  tmp_100.txt  tmp_2000.txt
docker/: README.txt  run_all_on_bigubu_docker.sh
docker/Z2/Z2.1/: run_on_docker.sh
docker/Z2/Z2.2/: run_on_docker.sh
docker/Z2/Z2.3/: run_on_docker.sh
docker/Z2/Z2.3a/: run_on_docker.sh
docker/client/: client_docker_setup.sh  run_client.sh
docker/client/c/: Dockerfile  run_c_client_on_bigubu_docker.sh  run_client.sh  run_client_on_bigubu_docker.sh
docker/server/: server_docker_setup.sh
docker/server/c/: Dockerfile  run_server.sh  run_server_on_bigubu_docker.sh
docker/server/python/: Dockerfile  run_python_server_on_bigubu_docker.sh  run_server.sh  run_server_on_bigubu_docker.sh
project/: .gitignore  .pre-commit-config.yaml  ConnectionManager.py  Makefile  README.md  beans.py  config.env.template  config.py  main.py  requirements.txt
project/beans/: database_manager.py  global_category_manager.py
project/docker/: run_on_bigubu_docker.sh
project/docker/server/: Dockerfile  run_on_docker.sh  run_server.sh
project/domain/: Ad.py  Board.py  Category.py
project/managers/: CategoryManager.py  ConnectionManager.py  DatabaseManager.py  GlobalCategoryManager.py  id_generator.py
project/managers/test/: test_CategoryManager.py  test_ConnectionManager.py  test_DatabaseManager.py  test_GlobalCategoryManager.py
project/routers/: board_router.py  history_router.py  send_router.py
project/routers/test/: test_board_router.py  test_send_router.py
project/views/: board.html  send-ad.html
python/Z1/Z1.1/: client.py  server.py
python/Z1/Z1.2/: client.py  server.py
python/Z1/Z1.3/: client.py  server.py
python/Z2/Z2.1/: server.py
python/Z2/Z2.2/: server.py
(+40 files in other folders)
